tests/samples/negative/visibility/private_reexport_enum.ax
module private_reexport_enum;

import samplelib.reexport_facade;

fn main() -> i32 {
    let value = SecretMode.hidden;
    return 0;
}
